# scientific_article_plagiarism_detection

./: .gitignore  README.md  acl_crawler.py  arxiv_crawler.py  ijcai_json.json  plagiarism_detector.py  pyproject.toml
crawl_scripts/: cvf_crawl.py
crawler_script/: Ijcai_crawl.py  ijcai_crawler.py  pmlr_crawl.py
delete_error_file/: delete_error_file.py  delete_error_file_pdf.py
eda_scripts/: eda.py
embed/: __init__.py  server.py
embed_server/: chunking.py  config.py  embedder.py  embedding.py  server.py
embedding_scripts/: embed_abstract_to_chroma.py
extract_script/: extract.py  extract_v2.py
json/: acl_json.json  arxiv_json.json
json_output/: A_On_Which_Data_Distribution_Synthetic_or_Real_We_Should_Rely_WACV_2025_paper_processed.json  Aakanksha_Improving_Robustness_of_Semantic_Segmentation_to_Motion-Blur_Using_Class-Centric_Augmentation_CVPR_2023_paper_processed.json  Aakerberg_PDA-RWSR_Pixel-Wise_Degradation_Adaptive_Real-World_Super-Resolution_WACV_2024_paper_processed.json  Abati_ResQ_Residual_Quantization_for_Video_Perception_ICCV_2023_paper_processed.json  Abbasi_BrainWash_A_Poisoning_Attack_to_Forget_in_Continual_Learning_CVPR_2024_paper_processed.json  Abbasi_CLIP_Under_the_Microscope_A_Fine-Grained_Analysis_of_Multi-Object_Representation_CVPR_2025_paper_processed.json  Abdal_3DAvatarGAN_Bridging_Domains_for_Personalized_Editable_Avatars_CVPR_2023_paper_processed.json  Abdal_Gaussian_Shell_Maps_for_Efficient_3D_Human_Generation_CVPR_2024_paper_processed.json
pdf_parser/: pdf_paddle.py  pdf_pymupdf.py
query_for_llm/: input.json  input.parquet  (+1 more)
(+15 files in other folders)
