[project]
name = "massivedata"
version = "0.1.0"
description = "Scientific Article Plagiarism Detection — modular pipeline for PDF crawling, embedding, EDA, parsing, and semantic search."
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "chromadb==1.5.8",
    "sentence-transformers==5.4.1",
    "pymupdf==1.27.2.2",
    "fastapi==0.136.0",
    "uvicorn==0.44.0",
    "pydantic==2.12.5",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "loguru==0.7.3",
    "litellm==1.83.14",
]
